best-practices-k8s/require_pod_antiaffinity/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-required
  labels:
    app: test
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - test
          topologyKey: "kubernetes.io/hostname"
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-preferred
  labels:
    app: test
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        - weight: 100
          podAffinityTerm:
            labelSelector:
              matchExpressions:
                - key: app
                  operator: In
                  values:
                    - test
            topologyKey: "kubernetes.io/hostname"
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-no-affinity
  labels:
    app: test
spec:
  containers:
    - name: nginx
      image: nginx
